{
  "version": 4,
  "terraform_version": "1.1.5",
  "serial": 18,
  "lineage": "83f2acc7-7aa7-545a-8419-b9f99c12d72b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "tutorial_web_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07c0b49c972f0779b",
            "association_id": "eipassoc-0b11c6e330fe72c15",
            "domain": "vpc",
            "id": "eipalloc-07c0b49c972f0779b",
            "instance": "i-09439b8a915e3c83d",
            "network_border_group": "eu-west-2",
            "network_interface": "eni-0b6c24f505e19f83c",
            "private_dns": "ip-10-0-1-79.eu-west-2.compute.internal",
            "private_ip": "10.0.1.79",
            "public_dns": "ec2-18-168-211-125.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.168.211.125",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "tutorial_web_eip_0"
            },
            "tags_all": {
              "Name": "tutorial_web_eip_0"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.tutorial_web",
            "aws_key_pair.tutorial_kp",
            "aws_security_group.tutorial_web_sg",
            "aws_subnet.tutorial_public_subnet",
            "aws_vpc.tutorial_vpc",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "tutorial_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-028a5cd4ffd2ee495",
            "arn": "arn:aws:ec2:eu-west-2:078863656104:instance/i-09439b8a915e3c83d",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09439b8a915e3c83d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "tutorial_kp",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b6c24f505e19f83c",
            "private_dns": "ip-10-0-1-79.eu-west-2.compute.internal",
            "private_ip": "10.0.1.79",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02346a9a5f504e6f6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b1f47050a7f9f7cd",
            "tags": {
              "Name": "tutorial_web_0"
            },
            "tags_all": {
              "Name": "tutorial_web_0"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-01b28a167143412b2"
            ]
          },
          "dependencies": [
            "aws_key_pair.tutorial_kp",
            "aws_security_group.tutorial_web_sg",
            "aws_subnet.tutorial_public_subnet",
            "aws_vpc.tutorial_vpc",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "tutorial_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:078863656104:internet-gateway/igw-0792551e99bbe4d38",
            "id": "igw-0792551e99bbe4d38",
            "owner_id": "078863656104",
            "tags": {
              "Name": "tutorial_igw"
            },
            "tags_all": {
              "Name": "tutorial_igw"
            },
            "vpc_id": "vpc-0aa3a1488a123184f"
          },
          "dependencies": [
            "aws_vpc.tutorial_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tutorial_private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:078863656104:route-table/rtb-0e7b39ecff2286ae7",
            "id": "rtb-0e7b39ecff2286ae7",
            "owner_id": "078863656104",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0aa3a1488a123184f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tutorial_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tutorial_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:078863656104:route-table/rtb-00558558b1a07df22",
            "id": "rtb-00558558b1a07df22",
            "owner_id": "078863656104",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0792551e99bbe4d38",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0aa3a1488a123184f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.tutorial_igw",
            "aws_vpc.tutorial_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a66028a4562fa1a3",
            "route_table_id": "rtb-0e7b39ecff2286ae7",
            "subnet_id": "subnet-08e23e7e171f921a0"
          },
          "dependencies": [
            "aws_route_table.tutorial_private_rt",
            "aws_subnet.tutorial_private_subnet",
            "aws_vpc.tutorial_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bc1f93b6a3366ca6",
            "route_table_id": "rtb-0e7b39ecff2286ae7",
            "subnet_id": "subnet-0440714dbbe029316"
          },
          "dependencies": [
            "aws_route_table.tutorial_private_rt",
            "aws_subnet.tutorial_private_subnet",
            "aws_vpc.tutorial_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01e1abc23a2c2433a",
            "route_table_id": "rtb-00558558b1a07df22",
            "subnet_id": "subnet-0b1f47050a7f9f7cd"
          },
          "dependencies": [
            "aws_internet_gateway.tutorial_igw",
            "aws_route_table.tutorial_public_rt",
            "aws_subnet.tutorial_public_subnet",
            "aws_vpc.tutorial_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tutorial_db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:078863656104:security-group/sg-0000bcb4a958dabfa",
            "description": "Security group for tutorial databases",
            "egress": [],
            "id": "sg-0000bcb4a958dabfa",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow MySQL traffic from only the web sg",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01b28a167143412b2"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "tutorial_db_sg",
            "name_prefix": "",
            "owner_id": "078863656104",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tutorial_db_sg"
            },
            "tags_all": {
              "Name": "tutorial_db_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aa3a1488a123184f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.tutorial_web_sg",
            "aws_vpc.tutorial_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tutorial_web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:078863656104:security-group/sg-01b28a167143412b2",
            "description": "Security group for tutorial web servers",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01b28a167143412b2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all traffic through HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "Allow SSH from my computer",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "tutorial_web_sg",
            "name_prefix": "",
            "owner_id": "078863656104",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tutorial_web_sg"
            },
            "tags_all": {
              "Name": "tutorial_web_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aa3a1488a123184f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tutorial_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tutorial_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:078863656104:subnet/subnet-08e23e7e171f921a0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08e23e7e171f921a0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "078863656104",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tutorial_private_subnet_0"
            },
            "tags_all": {
              "Name": "tutorial_private_subnet_0"
            },
            "vpc_id": "vpc-0aa3a1488a123184f"
          },
          "dependencies": [
            "aws_vpc.tutorial_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:078863656104:subnet/subnet-0440714dbbe029316",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0440714dbbe029316",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "078863656104",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tutorial_private_subnet_1"
            },
            "tags_all": {
              "Name": "tutorial_private_subnet_1"
            },
            "vpc_id": "vpc-0aa3a1488a123184f"
          },
          "dependencies": [
            "aws_vpc.tutorial_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tutorial_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:078863656104:subnet/subnet-0b1f47050a7f9f7cd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b1f47050a7f9f7cd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "078863656104",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tutorial_public_subnet_0"
            },
            "tags_all": {
              "Name": "tutorial_public_subnet_0"
            },
            "vpc_id": "vpc-0aa3a1488a123184f"
          },
          "dependencies": [
            "aws_vpc.tutorial_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tutorial_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:078863656104:vpc/vpc-0aa3a1488a123184f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0020fc79c874e6291",
            "default_route_table_id": "rtb-0887bd26c5cc53591",
            "default_security_group_id": "sg-0d77160706e28aaec",
            "dhcp_options_id": "dopt-004c3a2cecf862eba",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0aa3a1488a123184f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0887bd26c5cc53591",
            "owner_id": "078863656104",
            "tags": {
              "Name": "tutorial_vpc"
            },
            "tags_all": {
              "Name": "tutorial_vpc"
            }
          }
        }
      ]
    }
  ]
}